--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
             <button class="cadastro">Cadastrar</button>
         </div>
     </header>
+    <section class="cabecalho">
+        <span>Sobre nós</span>
+        <h1>Por que somos diferentes?</h1>
+        <p>Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+    </section>
 </body>
 </html>
