--- a/index.html
+++ b/index.html
@@ -30,5 +30,100 @@
         <h1>Por que somos diferentes?</h1>
         <p>Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
     </section>
+    <section class="metricas">
+        <div class="info-metricas">
+            <h1>400+</h1>
+            <p>Projetos concluídos</p>
+            <span>Nós ajudamos a construir mais de 400 projetos incríveis</span>
+        </div>
+
+        <div class="info-metricas">
+            <h1>100+</h1>
+            <p>Colaboradores</p>
+            <span>Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</span>
+        </div>
+
+        <div class="info-metricas">
+            <h1>20k</h1>
+            <p>Downloads</p>
+            <span>Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</span>
+        </div>
+
+        <div class="info-metricas">
+            <h1>500+</h1>
+            <p>Reviews 5 estrelas</p>
+            <span>Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</span>
+        </div>
+    </section>
+    <section class="vagas">
+        <div class="talentos">
+            <span>Vagas abertas!</span>
+            <h2>Estamos procurando por talentos</h2>
+            <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+        <picture>
+            <img src="imagens/img-vagas.jpg" alt="">
+        </picture>
+        </div>
+        <div class="vagas-abertas">
+            <div class="vaga">
+                <p class="area-vaga">Design</p>
+                <div class="titulo-vaga">
+                    <p>Product Designer</p>
+                </div>
+                <div class="informacao-vaga">
+                    <span>Full-time</span>
+                    <span>Faixa salarial: R$7.000</span>
+                </div>
+            </div>
+            <div class="vaga">
+                <div class="titulo-vaga">
+                    <p>UX Designer</p>
+                </div>
+                <div class="informacao-vaga">
+                    <span>Full-time</span>
+                    <span>Faixa salarial: R$6.000</span>
+                </div>
+            </div>
+            <div class="vaga">
+                <p class="area-vaga">Desenvolvimento de Software</p>
+                <div class="titulo-vaga">
+                    <p>Desenvolvedor(a) iOS</p>
+                </div>
+                <div class="informacao-vaga">
+                    <span>Full-time</span>
+                    <span>Faixa salarial: R$8.000</span>
+                </div>
+            </div>
+            <div class="vaga">
+                <div class="titulo-vaga">
+                    <p>Desenvolvedor(a) Front-end</p>
+                </div>
+                <div class="informacao-vaga">
+                    <span>Full-time</span>
+                    <span>Faixa salarial: R$7.000</span>
+                </div>
+            </div>
+            <div class="vaga">
+                <div class="titulo-vaga">
+                    <p>Desenvolvedor(a) Back-end</p>
+                </div>
+                <div class="informacao-vaga">
+                    <span>Full-time</span>
+                    <span>Faixa salarial: R$8.000</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="depoimentos">
+
+        <span>Veja o que nossos colaboradores falam sobre nós</span>
+        <h2>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
+
+        <picture>
+            <img src="imagens/Avatar.png" alt="">
+        </picture>
+        <p>Júlia Castro</p>
+        <p class="modif">Desenvolvedora Web</p>
+    </section>
 </body>
 </html>
