--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@
     <link rel="stylesheet" href="medias.css">
     <title>OptimusTech - Trabalhe conosco</title>
 </head>
-<body onresize="mudouTamanho()">
+<body>
     <header>
         <a href="#">
             <div class="logo">
                     <img src="imagens/ww-logo.png" alt="logo-OptimusTech" width="27px" height="27px"> OptimusTech
             </div>
         </a>
+
+        <nav class="menu" id="menu">
+            <a href="#" class="menu-in">Home</a>
+            <a href="#" class="menu-in">Produtos</a>
+            <a href="#" class="menu-in">Recursos</a>
+            <a href="#" class="menu-in">Sobre nós</a>
+        </nav>
         
-        <div class="naveg">
-            <i class="uil uil-bars" id="burguer"></i>
-            <nav id="menu">
-                <a href="#" class="menu-in">Home</a>
-                <a href="#" class="menu-in">Produtos</a>
-                <a href="#" class="menu-in">Recursos</a>
-                <a href="#" class="menu-in">Sobre nós</a>
-            </nav>
-        </div>
+        <div class="uil uil-bars"></div>
         
-        <div class="butoes">
+        <div class="botoes">
             <a href="#">Entrar</a>
             <button class="cadastro">Cadastrar</button>
         </div>
